# wordle-solver-python

./: .bumpversion.cfg  .darglint  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  settings.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
src/wordle_solver/: __main__.py  config.py  main.py  solver.py  utils.py  wordle.py
tests/: test_dynaconf.py
tests/test_main/: test_add_numbers.py  test_cli.py
tests/test_utils/: test_calculate_hints.py  test_load_word_list.py
