[tool.poetry]
name = "wordle-solver-python"
version = "0.1.0"
description = "A solver for the popular word game Wordle, written in Python."
readme = "README.md"
authors = ["purple_emily <purple_emily@protonmail.com>"]
license = "MIT"
repository = "https://github.com/purple-emily/wordle-solver-python"

packages = [
    { include = "wordle_solver", from="src" }
]

[tool.poetry.dependencies]
attrs = "^21.4.0"
dynaconf = "^3.1.7"
loguru = "^0.6.0"
python = "^3.10"
tqdm = "^4.63.1"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
coverage-badge = "^1.1.0"
isort = "^5.10.1"
mypy = "^0.942"
perflint = "^0.6.0"
pre-commit = "^2.17.0"
pylint = "^2.13.0"
safety = "^1.10.3"

# flake8 + plugins
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
flake8-comprehensions = "^3.8.0"
flake8-pytest-style = "^1.6.0"
pep8-naming = "^0.12.1"

# pytest + plugins
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.11.0"
pytest-xdist = {extras = ["all"], version = "^2.5.0"}

[tool.poetry.scripts]
ws = "wordle_solver.main:app"
wordle-solver = "wordle_solver.main:app"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["wordle_solver"]
data_file = ".cache/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "from",
    "import",
]

[tool.pytest.ini_options]
minversion = "7.0"
# --cov-report types: term-missing, annotate, html, xml
addopts = """
--cov-report term-missing
--cov
-r a
--strict-markers
"""
# --cov-fail-under=55
# -n auto
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".cache"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow" # (deselect with '-m "not slow"')
]

cache_dir = ".cache/pytest/"

[tool.mypy]
python_version = 3.9
strict = true
strict_equality = true

show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true

warn_no_return = true
warn_unreachable = true

cache_dir = ".cache/mypy/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
